# inkTeX

./: .env.example  .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: analyze.py  convert.py  math.py
backend/app/services/: latex_assembler.py  layout_detector.py  math_recognizer.py  pdf_compiler.py  text_ocr.py
backend/ml/: augment.py  dataset.py  decoder.py  encoder.py  evaluate.py  image_utils.py  model.py  tokenizer.py  train.py
backend/scripts/: download_data.sh  prepare_layout_data.py  preprocess_data.py  seed_test_images.py  train_layout.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: API_CONTRACT.md  BLOCK_FORMAT.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: BlockList.jsx  BoundingBoxOverlay.jsx  MathPreview.jsx  PdfViewer.jsx  UploadZone.jsx
frontend/src/pages/: ResultPage.jsx  UploadPage.jsx
notebooks/: explore_dataset.ipynb  layout_detection_test.ipynb  ocr_test.ipynb
