[project]
name = "inktex-backend"
version = "0.1.0"
description = "Backend services and ML pipeline for inkTeX — handwriting to compiled LaTeX"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Pranav" },
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40,<5",
    "ultralytics>=8.2",
    "sentence-transformers>=2.7",
    "python-multipart>=0.0.9",
    "Pillow>=10.3",
    "numpy>=1.26",
    "wandb>=0.16",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ml*"]
